--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+    <meta name="description" content="The Rolling Times"/>
+    <meta name="author" content="Mauricio G. Castro,Jose Ignacio Lopez,Luciano Chipolina, Nicolas Bertini Argañaraz, Pablo Gabriel Cativa,Carlos Rodriguez, Rosario Serrano" 
     />
+    <meta name="keywords" content="Noticias,Mundo,Covid19,Clima,Dollars"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>The Rolling Times</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
